--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 
 <body>
 
-<div id="page-title">
+<div class="page-title-class">
     Loving Score calculation
 </div>
 
-<div id="first-text-box">
+<img src="./img/zamours01.jpg"/>
+
+<div class="text-box" id="first-text-box">
   <input type="text" name="first-name" placeholder="Enter first name"/>
 </div>
 
-<div id="second-text-box">
+<div class="text-box" id="second-text-box">
   <input type="text" name="second-name" placeholder="Enter second name"/>
 </div>
 
